--- a/.env.local
+++ b/.env.local
@@ -3,5 +3,5 @@ NEXT_PUBLIC_FIREBASE_API_KEY = AIzaSyC7FP4X-9t_LY8hl6TUN-n2Y8_baWShLFo
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN = leetcode-yt-f23ed.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID = leetcode-yt-f23ed
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = leetcode-yt-f23ed.appspot.com
-NEXT PUBLIC FIREBASE MESSAGING SENDER ID = 472637300912
-NEXT PUBLIC APP ID = 1:472637300912:web:bf84a311928b43f3addb75
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = 472637300912
+NEXT_PUBLIC_APP_ID = 1:472637300912:web:bf84a311928b43f3addb75
